--- a/Pitch/Views/MusicQueueTableViewCell.xib
+++ b/Pitch/Views/MusicQueueTableViewCell.xib
@@ -27,26 +27,26 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="72.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Song Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Boc-dK-Lqs">
-                        <rect key="frame" x="5" y="5" width="129" height="22"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="252" text="Song Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Boc-dK-Lqs">
+                        <rect key="frame" x="5" y="5" width="255.5" height="22"/>
                         <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="22"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PO9-7x-one">
-                        <rect key="frame" x="5" y="32" width="101.5" height="35.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Artist Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PO9-7x-one">
+                        <rect key="frame" x="5" y="32" width="255.5" height="35.5"/>
                         <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ihC-LN-ACy">
-                        <rect key="frame" x="305" y="26" width="10" height="21"/>
+                        <rect key="frame" x="305.5" y="26" width="9.5" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hKs-4J-wia">
-                        <rect key="frame" x="265" y="21.5" width="30" height="30"/>
+                        <rect key="frame" x="265.5" y="21.5" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="qHh-Ia-wqF"/>
                             <constraint firstAttribute="height" constant="30" id="sEx-B3-37N"/>
@@ -57,6 +57,7 @@
                 <constraints>
                     <constraint firstItem="ihC-LN-ACy" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="0UK-Fk-lXi"/>
                     <constraint firstItem="ihC-LN-ACy" firstAttribute="centerY" secondItem="hKs-4J-wia" secondAttribute="centerY" id="3af-MX-0Y8"/>
+                    <constraint firstItem="hKs-4J-wia" firstAttribute="leading" secondItem="PO9-7x-one" secondAttribute="trailing" constant="5" id="ERi-7d-hCU"/>
                     <constraint firstAttribute="trailing" secondItem="ihC-LN-ACy" secondAttribute="trailing" constant="5" id="JOM-O4-TG6"/>
                     <constraint firstItem="Boc-dK-Lqs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="QzF-zf-mwU"/>
                     <constraint firstItem="PO9-7x-one" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="YIr-r0-Ejw"/>
@@ -64,9 +65,16 @@
                     <constraint firstItem="PO9-7x-one" firstAttribute="top" secondItem="Boc-dK-Lqs" secondAttribute="bottom" constant="5" id="iuK-tL-8s1"/>
                     <constraint firstItem="Boc-dK-Lqs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="sA9-sI-43H"/>
                     <constraint firstAttribute="bottom" secondItem="PO9-7x-one" secondAttribute="bottom" constant="5" id="tks-39-mrd"/>
+                    <constraint firstItem="hKs-4J-wia" firstAttribute="leading" secondItem="Boc-dK-Lqs" secondAttribute="trailing" constant="5" id="xmt-wa-h7A"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="artistNameLabel" destination="PO9-7x-one" id="Su6-Kj-WhZ"/>
+                <outlet property="likeButton" destination="hKs-4J-wia" id="lNY-po-Nsy"/>
+                <outlet property="numLikesLabel" destination="ihC-LN-ACy" id="rUd-uq-Tdl"/>
+                <outlet property="songNameLabel" destination="Boc-dK-Lqs" id="rnp-gl-Uxg"/>
+            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="143.63839285714286"/>
         </tableViewCell>
     </objects>
