Changed UI for filter in Explore VC and tints in Create Event VC to be consistent, fixed bug for search location placeholder

--- a/Pitch/Views/VibesCell.xib
+++ b/Pitch/Views/VibesCell.xib
@@ -39,7 +39,7 @@
                                 </collectionViewFlowLayout>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" red="0.96079081296920776" green="0.9607728123664856" blue="0.96078497171401978" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="eY4-IR-WXg" secondAttribute="trailing" constant="5" id="aNh-RU-Por"/>
                             <constraint firstAttribute="height" constant="60" id="eYo-TS-lbl"/>
