--- a/Pitch/Views/Explore Views/DistanceCell.xib
+++ b/Pitch/Views/Explore Views/DistanceCell.xib
@@ -36,13 +36,13 @@
                         <subviews>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="3Z8-Su-Pge">
                                 <rect key="frame" x="3" y="5" width="304" height="56"/>
-                                <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <action selector="sliderDidSlide:" destination="KGk-i7-Jjw" eventType="valueChanged" id="nYw-72-Wk2"/>
                                 </connections>
                             </slider>
                         </subviews>
-                        <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="3Z8-Su-Pge" secondAttribute="bottom" id="Cvr-Db-3ik"/>
                             <constraint firstAttribute="height" constant="60" id="QMe-uk-ZrV"/>
