--- a/Pitch/Views/Explore Views/NumberOfPeopleCell.xib
+++ b/Pitch/Views/Explore Views/NumberOfPeopleCell.xib
@@ -27,7 +27,7 @@
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CMi-Nj-dmt">
                         <rect key="frame" x="5" y="52.5" width="325" height="60"/>
-                        <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="60" id="CrL-K5-xMd"/>
                         </constraints>
