--- a/Pitch/Storyboards/EventDetails.storyboard
+++ b/Pitch/Storyboards/EventDetails.storyboard
@@ -44,7 +44,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.12941176470588234" green="0.80784313725490198" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="qJ0-uT-ZIL" firstAttribute="centerX" secondItem="lm5-WC-XOP" secondAttribute="centerX" id="OdB-2J-PsN"/>
                                     <constraint firstItem="sfi-ss-WHh" firstAttribute="centerX" secondItem="lm5-WC-XOP" secondAttribute="centerX" id="eOQ-W6-hvI"/>
@@ -261,7 +261,7 @@
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.0" green="0.99143940210000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.0" green="0.99215686274509807" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="k3F-CP-2cl" firstAttribute="top" secondItem="33G-vY-qsE" secondAttribute="bottom" constant="6" id="Iww-Dc-1nf"/>
                                     <constraint firstItem="33G-vY-qsE" firstAttribute="centerX" secondItem="Bee-g3-Lnv" secondAttribute="centerX" id="MCQ-1H-gzr"/>
@@ -273,6 +273,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="cek-BO-EKE">
                                 <rect key="frame" x="0.0" y="100" width="414" height="747"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" red="0.12941176470588234" green="0.80784313725490198" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="xIG-kX-inQ">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -296,7 +297,7 @@
                                                 </imageView>
                                             </subviews>
                                         </view>
-                                        <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstItem="Bcx-TE-XwP" firstAttribute="top" secondItem="CLd-RX-NTA" secondAttribute="top" id="Dxo-6c-Gqk"/>
                                             <constraint firstAttribute="bottom" secondItem="Bcx-TE-XwP" secondAttribute="bottom" id="MYP-1F-BFD"/>
