--- a/Pitch/Storyboards/Base.lproj/Main.storyboard
+++ b/Pitch/Storyboards/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DnF-qo-7MZ">
-                                <rect key="frame" x="15" y="25" width="30" height="30"/>
+                                <rect key="frame" x="172.5" y="25" width="30" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="30" id="MFh-n9-PpG"/>
                                     <constraint firstAttribute="height" constant="30" id="Pfx-cU-KoM"/>
@@ -32,7 +32,7 @@
                         <color key="backgroundColor" red="0.37075540420000003" green="0.77097988129999995" blue="0.59605771299999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="DnF-qo-7MZ" firstAttribute="top" secondItem="Prw-pW-Jzn" secondAttribute="top" constant="25" id="NCr-Av-YdB"/>
-                            <constraint firstItem="DnF-qo-7MZ" firstAttribute="leading" secondItem="lxC-Xh-hFd" secondAttribute="leading" constant="15" id="PNa-BA-F3t"/>
+                            <constraint firstItem="DnF-qo-7MZ" firstAttribute="centerX" secondItem="Prw-pW-Jzn" secondAttribute="centerX" id="a9T-5A-FdR"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lxC-Xh-hFd"/>
                     </view>
