When events aren't found then the applyFilters button is automatically changed for convenience

--- a/Pitch/Views/ApplyFiltersCell.xib
+++ b/Pitch/Views/ApplyFiltersCell.xib
@@ -19,15 +19,12 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="62.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uuT-SV-sC3">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uuT-SV-sC3" customClass="CustomFilterButton">
                         <rect key="frame" x="10" y="15" width="300" height="42.5"/>
                         <color key="backgroundColor" red="0.074509803920000006" green="0.4823529412" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <state key="normal" title="Apply Filters">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
-                        <connections>
-                            <action selector="applyfiltersButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="0PW-xZ-hF5"/>
-                        </connections>
                     </button>
                 </subviews>
                 <constraints>
